development.ini: Make beagleboard.org specific changes

--- a/development.ini
+++ b/development.ini
@@ -54,7 +54,7 @@ debexpo.handle_debian = true
 debexpo.sitetitle = Mentors
 
 # Site name
-debexpo.sitename = mentors.debian.net
+debexpo.sitename = debexpo.beagleboard.org
 
 # Site tagline
 debexpo.tagline = Helps you get your packages into Debian
@@ -63,7 +63,7 @@ debexpo.tagline = Helps you get your packages into Debian
 debexpo.logo = /debexpo-logo.png
 
 # Site support email
-debexpo.email = support@mentors.debian.net
+debexpo.email = beagleboard@googlegroups.com
 
 # Whether to show Debian-specific options
 debexpo.debian_specific = true
@@ -84,13 +84,13 @@ debexpo.plugins.post_successful_upload = changeslist
 debexpo.plugindir = /tmp
 
 # Location of the nearest Debian mirror
-debexpo.debian_mirror = http://ftp.uk.debian.org/debian
+debexpo.debian_mirror = http://debian.beagleboard.org/debian
 
 # Email address to send package accepts to
-debexpo.changes_list = changes@example.com
+debexpo.changes_list = beagleboard@googlegroups.com
 
 # Server debexpo is being run on including http:// and excluding trailing slash
-debexpo.server = http://localhost:5000
+debexpo.server = http://debexpo.beagleboard.org:5000
 
 # Path to the gpg binary
 debexpo.gpg_path = /usr/bin/gpg
