development.ini: Add new flags for enabling SSL and port change

--- a/development.ini
+++ b/development.ini
@@ -10,6 +10,8 @@ debug = true
 smtp_server = localhost
 smtp_username =
 smtp_password =
+#smtp_ssl = false
+#smtp_port = 25
 error_email_from = paste@localhost
 
 [server:main]
